# iai_kinect2

./: .gitignore
kinect2_bridge/data/501185143042/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_viewer/: CMakeLists.txt
kinect2_viewer/src/: viewer.cpp  viewerPointer.cpp  viewer_hard_coded.cpp  viewer_refined.cpp
viewer_ex/: CMakeLists.txt
